hphp/hack/test/typecheck/readonly/readonly_expected_fun.php.exp
File "readonly_expected_fun.php", line 12, characters 11-12:
Invalid argument (Typing[4411])
  File "readonly_expected_fun.php", line 8, characters 8-53:
  Function readonly return mismatch
  File "readonly_expected_fun.php", line 8, characters 8-53:
  This function returns a readonly value
  File "readonly_expected_fun.php", line 3, characters 22-41:
  This function does not return a readonly value
File "readonly_expected_fun.php", line 13, characters 11-57:
Invalid argument (Typing[4411])
  File "readonly_expected_fun.php", line 13, characters 11-57:
  Function readonly return mismatch
  File "readonly_expected_fun.php", line 13, characters 11-57:
  This function returns a readonly value
  File "readonly_expected_fun.php", line 3, characters 22-41:
  This function does not return a readonly value
